5-desafio/k8s-files/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
      app: frontend
      tier: frontend
  template:
    metadata:
      labels:
        io.kompose.network/app-net: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: ENDPOINT
                  name: env
          image: mistagreen/craftech-desafio-front:latest
          name: frontend
          ports:
            - containerPort: 3000
      restartPolicy: Always
