5-desafio/k8s-files/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    io.kompose.service: backend
    app: backend
    tier: backend
  ports:
    - port: 8000
      targetPort: 8000
