5-desafio/k8s-files/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
