5-desafio/k8s-files/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: frontend
    app: frontend
    tier: frontend
