5-desafio/k8s-files/app-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/app-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/app-net: "true"
